<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.njdaeger</groupId>
    <artifactId>GreenfieldCore</artifactId>
    <version>1.6-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>essentials-snapshots</id>
            <url>https://repo.essentialsx.net/snapshots/</url>
        </repository>
        <repository>
            <id>paper-repo</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigot</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/org/spigotmc/spigot-api/</url>
        </repository>
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>vault-repo</id>
            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
        </repository>
        <repository>
            <id>dynmap</id>
            <url>https://repo.mikeprimm.com/</url>
        </repository>
        <repository>
            <id>coreprotect</id>
            <url>https://maven.playpro.com/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>com.njdaeger.pdk</pattern>
                            <shadedPattern>com.njdaeger.greenfieldcore.libs.pdk</shadedPattern>
                        </relocation>

                    </relocations>
                </configuration>
            </plugin>

        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>*.png</include>
                </includes>
            </resource>
        </resources>

    </build>

    <dependencies>
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.19.0-SNAPSHOT</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>*</artifactId>
                    <groupId>*</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.coreprotect</groupId>
            <artifactId>coreprotect</artifactId>
            <version>20.0</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>*</artifactId>
                    <groupId>*</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>us.dynmap</groupId>
            <artifactId>dynmap-api</artifactId>
            <version>3.2-beta-1</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>us.dynmap</groupId>-->
<!--            <artifactId>DynmapCoreAPI</artifactId>-->
<!--            <version>3.2-beta-1</version>-->
<!--            <scope>provided</scope>-->
<!--            <exclusions>-->
<!--                <exclusion>-->
<!--                    <groupId>org.bukkit</groupId>-->
<!--                    <artifactId>bukkit</artifactId>-->
<!--                </exclusion>-->
<!--            </exclusions>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>net.dries007.mclink</groupId>-->
<!--            <artifactId>MCLink-Bukkit</artifactId>-->
<!--            <version>0.3.2</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>C:/Users/Noah/.m2/repository/net/dries007/mclink/MCLink-Bukkit/0.3.2/MCLink-Bukkit-0.3.2.jar</systemPath>-->
<!--        </dependency>-->

        <dependency>
            <groupId>com.njdaeger</groupId>
            <artifactId>AuthenticationHub</artifactId>
            <version>0.1.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.njdaeger</groupId>
            <artifactId>PluginDevelopmentKit</artifactId>
            <version>0.0.5</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>Vault</artifactId>
            <version>1.7.3</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.18.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-core</artifactId>
            <version>7.2.7</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.7</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

</project>